apply .editorconfig to all files